code is updated, testClass are added